tdf#146173: combine non-BMP characters' surrogates correctly

Change-Id: Ib3af1f9e461f133d2f5b09b9db4fb87c1ede0b9f